tests/negative/neg_pr1116_nominal_non_integer_parent.safe
package neg_pr1116_nominal_non_integer_parent

   type bad_id is new boolean;
